[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DIAYN"
version = "0.1.0"
description = "Diversity is all you need implementation"
authors = [{ name = "Rachanon Wachakorn", email = "rwackorn3@gatech.edu" }]
dependencies = [
    "torch==2.6.0",
    "mujoco==3.3.0",
    "gymnasium[mujoco]==1.1.0",
    "tensorboard==2.19.0",
]
readme = "readme.md"
requires-python = ">=3.10"

[tool.setuptools]
packages=["DIAYN"]
